tests/ui/transmute/transmute-fat-pointers.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fat-pointers.rs:11:14
   |
LL |     unsafe { transmute(x) }
   |              ^^^^^^^^^
   |
   = note: source type: `&[T]` (N bits)
   = note: target type: `&U` (pointer to `U`)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fat-pointers.rs:15:14
   |
LL |     unsafe { transmute(x) }
   |              ^^^^^^^^^
   |
   = note: source type: `&T` (pointer to `T`)
   = note: target type: `&U` (pointer to `U`)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fat-pointers.rs:27:14
   |
LL |     unsafe { transmute(x) }
   |              ^^^^^^^^^
   |
   = note: source type: `&T` (pointer to `T`)
   = note: target type: `&U` (N bits)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-fat-pointers.rs:31:14
   |
LL |     unsafe { transmute(x) }
   |              ^^^^^^^^^
   |
   = note: source type: `&T` (N bits)
   = note: target type: `&U` (pointer to `U`)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0512`.
